--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -26,7 +26,7 @@ main .first-section{
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    gap: 20px;
+    
 }
 #img-desc{
     width: 200px;
@@ -111,7 +111,7 @@ menu{
 }
 #exp{
     display: none;
-    background-color: #060E40;
+    background-color: #071359;
 }
 
 #exp h1{
@@ -140,4 +140,9 @@ menu{
     width: 48%;
     margin: auto;
     box-shadow: 0px 0px 10px #1F4CA6;
+}
+
+/* estilo utilizado pela função de alteração de column reverse */
+.change-to-column{
+    flex-direction: column !important;
 }
